# bakery-shop

./: .dockerignore  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  Caddyfile.dev  Caddyfile.redirect  Dockerfile  ROADMAP.md  docker-compose.yml  docker-entrypoint.sh  flake.nix  pyproject.toml
.claude/: branch-strategy.yaml
.githooks/: pre-commit  prepare-commit-msg
app/: .gitignore  README.md  analysis_options.yaml  app_name.conf  pubspec.yaml
config/: baker.example.yaml  docker.example
docs/: 2026-05-20-appbar-inventory-phase1.md  accounting-health-monitoring.md  accounting-journal-reference.md  authentication.md  code-quality-audit.md  dev-verification-workflow.md  dg-055-postmortem.md  dg245-event-ledger-map.md  flutter-coding-standards.md  lily-deploy.md  migration-rollback.md  pos-chip-gift-checkout-422-phase1-reproduction.md  post-merge-verification-checklist.md  pre-release-checklist.md  prod-workflow.md  production-repair-guide.md  pwa-deployment-guide.md  release-workflow.md
nix/: backup.nix  cups.nix  module.nix
scripts/: build-apk.sh  copy-prod-to-dev.sh  db-validate.sh  deploy-apk.sh  deploy-lily.sh  deploy-web.sh  docker-backup.sh  export_2100_orders.py  export_deposit_balances.py  export_deposit_gaps.py  lib.sh  lily-setup.sh  prod-update.sh  rebuild-dev.sh  recover-lily.sh  renew-certs.sh  repair-all-accounting.sh  sync-prod-to-dev.sh  update.sh  wasabi-backup.sh
tests/: auth_helpers.py  conftest.py  test_accounting_validation.py  test_actor_derivation.py  test_api.py  test_api_accounts.py  test_api_cake_queue.py  test_api_config.py  (+66 more)
(+543 files in other folders)
