[project]
name = "baker"
version = "0.3.0"
description = "Bakery shop operations tracker — capture first, organize later"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9", "Pillow>=10.0"]

[project.scripts]
baker = "baker.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
baker = ["assets/fonts/*.ttf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
